<resources>
    <string name="app_name">Bonne Pet</string>

    <string name="title_activity_register">Cadastrar</string>
    <string name="title_activity_language">Idioma</string>
    <string name="title_activity_edit_pet">Editar Pet</string>

    <!-- Bottom Menu -->
    <string name="title_search">Buscar</string>
    <string name="title_reservations">Reservas</string>
    <string name="title_pet">Pet</string>
    <string name="title_menu">Menu</string>

    <!-- Login -->
    <string name="facebook_login">ENTRAR COM FACEBOOK</string>
    <string name="login">ENTRAR</string>
    <string name="create_account">Não tem conta? Crie agora!</string>
    <string name="or">OU</string>
    <string name="login_invalid">Email ou Senha inválidos</string>

    <!-- Titulo de cada fragment da MainActivity -->
    <string name="search_accommodation">Buscar Por Lar</string>
    <string name="my_bookings">Minhas Reservas</string>
    <string name="my_pets">Meus Pets</string>
    <string name="menu">Menu</string>
    <string name="get_in">Entrar</string>

    <!-- User Form -->
    <string name="profile_picture_title">Foto do seu perfil</string>
    <string name="profile_picture_description">Use uma foto em alta resolução e bem iluminada do seu rosto. Evite fotos com óculos escuros</string>
    <string name="personal_info">Dados Pessoais</string>
    <string name="address">Endereço</string>
    <string name="name">Nome</string>
    <string name="email">Email</string>
    <string name="birth_date">Data de nascimento</string>
    <string name="gender">Gênero:</string>
    <string name="cell_phone">Telefone Celular</string>
    <string name="telephone">Telefone Residencial</string>
    <string name="password">Senha</string>
    <string name="optional">Opcional</string>
    <string name="cep">CEP</string>
    <string name="street">Rua</string>
    <string name="district">Bairro</string>
    <string name="city">Cidade</string>
    <string name="state">Estado</string>
    <string name="number">Número</string>
    <string name="forgot_cep"><u>Esqueceu seu cep?</u></string>
    <string name="register_successfully">Cadastro efetuado com sucesso</string>

    <!-- Generic Messages -->
    <string name="next">Próximo</string>
    <string name="register">Cadastrar</string>
    <string name="save">Salvar</string>
    <string name="returning">Voltar</string>
    <string name="generic_request_error">Não foi possível executar a requisição</string>
    <string name="small">Pequeno</string>
    <string name="medium">Médio</string>
    <string name="large">Grande</string>
    <string name="filter_menu">Filter</string>
    <string name="br_currency">R$</string>
    <string name="per_night">p/ noite</string>
    <string name="night">noite</string>
    <string name="nights">noites</string>
    <string name="phone">Telefone</string>
    <string name="about">Sobre</string>
    <string name="book">Reservar</string>
    <string name="observations">Observações</string>
    <string name="year">ano</string>
    <string name="years">anos</string>
    <string name="month">mês</string>
    <string name="months">meses</string>
    <string name="and">e</string>
    <string name="total">Total:</string>
    <string name="status">Status</string>
    <string name="cancel">Cancelar</string>
    <string name="finish">Finalizar</string>
    <string name="price">Preço</string>
    <string name="empty_book_message">Você não tem reservas</string>
    <string name="day">dia</string>
    <string name="days">dias</string>
    <string name="edit">Editar</string>
    <string name="progress_message">Carregando…</string>
    <string name="invalid_cep">Cep inválido</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Menu -->
    <string name="edit_profile">Editar Perfil</string>
    <string name="change_password">Alterar Senha</string>
    <string name="be_host">Ser um Host</string>
    <string name="change_language">Alterar Idioma</string>
    <string name="exit">Sair</string>

    <!-- Language -->
    <string name="select_language">Selecione um idioma</string>
    <string name="portuguese_language">Português (Brasil)</string>
    <string name="english_language">Inglês (EUA)</string>
    <string name="confirm">Confirmar</string>

    <!-- Edit Profile -->
    <string name="edit_profile_successfully">As modificações do seu perfil foram salvas</string>

    <!-- Pet -->
    <string name="register_pet_title">Adicionar Novo Pet</string>
    <string name="pet_name">Nome do pet</string>
    <string name="pet_breed">Raça</string>
    <string name="pet_gender">Gênero</string>
    <string name="pet_size">Porte</string>
    <string name="pet_age">Idade</string>
    <string name="pet_behaviour">Comportamento</string>
    <string name="pet_allergies">Alergias</string>
    <string name="pet_details_title">Detalhes Do Pet</string>
    <string name="your_home">Seu lar</string>
    <string name="your_request">Seus pedidos</string>
    <string name="male">Macho</string>
    <string name="female">Fêmea</string>
    <string name="mutt">Vira-lata</string>
    <string name="confident">Confiante</string>
    <string name="shy">Tímido</string>
    <string name="aggressive">Agressivo</string>
    <string name="sociable">Sociável</string>
    <string name="independent">Independente</string>
    <string name="preferences">Preferências</string>
    <string name="pet_register_success">Seu pet foi cadastrado com sucesso</string>
    <string name="pet_edit_success">Seu pet foi editado com sucesso</string>
    <string name="empty_pet_title"><b>Nenhum pet adicionado</b></string>
    <string name="empty_pet_subtitle">Parece que você não tem nenhum pet</string>
    <string name="pets">Pets</string>

    <!-- Host -->
    <string name="host_details_title">Detalhes Do Host</string>
    <string name="host_register_title">Cadastro De Host</string>
    <string name="host_edit_title">Editar Host</string>
    <string name="charge">Diária</string>
    <string name="size_preference">Preferência de tamanho</string>
    <string name="about_you">Sobre você</string>
    <string name="when_book_date">Quando será a hospedagem?</string>
    <string name="will_take">Levarei</string>
    <string name="will_get">Pegarei</string>
    <string name="which_pets">Quais pets?</string>
    <string name="invalid_book_date">Data de hospedagem inválido</string>
    <string name="select_pet">Selecione um pet</string>
    <string name="book_details">Detalhes da reserva</string>
    <string name="book_details_title">Detalhes Da Reserva</string>
    <string name="book_total_price">Preço da estadia</string>
    <string name="check_in">Check-in</string>
    <string name="check_out">Check-out</string>
    <string name="stay_days">Estadia:</string>
    <string name="stay_days_2">Estadia</string>
    <string name="not_host"><b>Voce não é um host</b></string>
    <string name="host_pet_now">Hospede pets em seu lar agora!</string>
    <string name="turn_host">Virar host</string>
    <string name="refuse">Recusar</string>
    <string name="accept">Aceitar</string>

    <!-- Status -->
    <string name="status_open">Em aberto</string>
    <string name="status_confirmed">Confirmado</string>
    <string name="status_refused">Recusado</string>
    <string name="status_finalized">Finalizado</string>
    <string name="status_error">Indefinido</string>

    <!-- Validation -->
    <string name="invalid_email">Por favor, insira um endereço de e-mail válido</string>
    <string name="invalid_date">Data inválida</string>
    <string name="invalid_phone">Número de telefone inválido</string>

    <!-- Rate -->
    <string name="excellent">Excelente</string>
    <string name="good">Bom</string>
    <string name="regular">Regular</string>
    <string name="bad">Ruim</string>
    <string name="very_bad">Péssimo</string>
    <string name="send">Enviar</string>
    <string name="feedback">Feedback</string>
    <string name="rate_host">Avalie o host</string>
    <string name="new_host">Novo!</string>
    <string name="rating">Avaliação</string>
    <string name="ratings">Avaliações</string>
    <string name="see_all_ratings">Ver todas as avaliações</string>

</resources>
