<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingRight="20dp"
        android:paddingLeft="20dp">

        <TextView
            android:id="@+id/address_title"
            style="@style/TextView.SubTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/address"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextInputLayoutAppearance.OutlineBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_cep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cep"
                android:inputType="number"
                android:textColor="@color/black"
                android:maxLength="8"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/forgot_cep_link"
            android:text="@string/forgot_cep"
            android:textSize="12sp"
            android:layout_marginBottom="16dp"
            android:textColor="@color/color_primary"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/input_layout_district"
            style="@style/TextInputLayoutAppearance.OutlineBox"
            android:layout_marginBottom="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_district"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/district"
                android:inputType="text"
                android:textColor="@color/black"/>
        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:id="@+id/input_layout_street"
                style="@style/TextInputLayoutAppearance.OutlineBox"
                android:layout_marginBottom="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_street"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/street"
                    android:inputType="text"
                    android:textColor="@color/black"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextInputLayoutAppearance.OutlineBox"
                android:layout_toEndOf="@+id/input_layout_street"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/number"
                    android:inputType="number"
                    android:textColor="@color/black"/>
            </com.google.android.material.textfield.TextInputLayout>

        </RelativeLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/input_layout_state"
            style="@style/TextInputLayoutAppearance.OutlineBox"
            android:layout_marginBottom="16dp">

            <br.com.bonnepet.util.component.AutoCompleteDropDown
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
                android:id="@+id/input_state"
                android:hint="@string/state"
                android:longClickable="false"
                android:focusableInTouchMode="false"
                android:inputType="textNoSuggestions"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/input_layout_city"
            style="@style/TextInputLayoutAppearance.OutlineBox"
            android:layout_marginBottom="26dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/city"
                android:inputType="text"
                android:textColor="@color/black"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_marginBottom="5dp"/>

        <com.google.android.material.button.MaterialButton
            style="@style/MaterialOutlinedButton"
            android:id="@+id/btn_return"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="34dp"
            android:text="@string/returning"/>
    </LinearLayout>
</ScrollView>