<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingRight="20dp"
        android:paddingLeft="20dp">

        <TextView
            style="@style/TextView.SubTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/personal_info"/>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/picture_layout"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:selectableItemBackground">

            <RelativeLayout
                android:layout_width="365sp"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/profile_image"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:layout_centerVertical="true"
                    android:layout_marginBottom="20dp"
                    app:srcCompat="@drawable/ic_account_circle"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/profile_image_title"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="16dp"
                    android:layout_toEndOf="@+id/profile_image"
                    android:text="@string/profile_picture_title"
                    android:textSize="15sp"
                    android:textColor="@color/gray_600"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_below="@+id/profile_image_title"
                    android:layout_toEndOf="@+id/profile_image"
                    android:text="@string/profile_picture_description"
                    android:textSize="13sp"
                    android:textColor="@color/gray_500"/>

            </RelativeLayout>
        </FrameLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            style="@style/TextInputLayoutAppearance.OutlineBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:textColor="@color/black"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            style="@style/TextInputLayoutAppearance.OutlineBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:passwordToggleEnabled="true"
            style="@style/TextInputLayoutAppearance.OutlineBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/black"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            style="@style/TextInputLayoutAppearance.OutlineBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_birth_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/birth_date"
                android:inputType="number"
                android:textColor="@color/black"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            style="@style/TextInputLayoutAppearance.OutlineBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_cell_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cell_phone"
                android:inputType="phone"
                android:maxLength="16"
                android:textColor="@color/black"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextInputLayoutAppearance.OutlineBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_telephone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/telephone"
                android:inputType="phone"
                android:maxLength="16"
                android:textColor="@color/black"/>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_marginBottom="12dp"
            android:layout_marginStart="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/optional"
            android:textColor="@color/gray_400"
            app:fontFamily="@font/montserrat_italic"
            android:textSize="12sp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/next"/>
    </LinearLayout>
</ScrollView>
