<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/relative_layout">

    <include
        layout="@layout/tool_bar_transparent"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tool_bar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:orientation="vertical">

            <TextView
                style="@style/TextView.SubTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/personal_info"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                style="@style/TextInputLayoutAppearance.OutlineBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    android:textColor="@color/black"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                style="@style/TextInputLayoutAppearance.OutlineBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_birth_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/birth_date"
                    android:inputType="number"
                    android:textColor="@color/black"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                style="@style/TextInputLayoutAppearance.OutlineBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_cell_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cell_phone"
                    android:inputType="phone"
                    android:maxLength="16"
                    android:textColor="@color/black"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                style="@style/TextInputLayoutAppearance.OutlineBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_telephone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/telephone"
                    android:inputType="phone"
                    android:maxLength="16"
                    android:textColor="@color/black"/>
            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/address_title"
                style="@style/TextView.SubTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/address"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextInputLayoutAppearance.OutlineBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_cep"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cep"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:maxLength="8"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/forgot_cep_link"
                android:text="@string/forgot_cep"
                android:textSize="12sp"
                android:layout_marginBottom="16dp"
                android:textColor="@color/color_primary"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/input_layout_district"
                style="@style/TextInputLayoutAppearance.OutlineBox"
                android:layout_marginBottom="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_district"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/district"
                    android:inputType="text"
                    android:textColor="@color/black"/>
            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/input_layout_street"
                    style="@style/TextInputLayoutAppearance.OutlineBox"
                    android:layout_marginBottom="16dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_street"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/street"
                        android:inputType="text"
                        android:textColor="@color/black"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/TextInputLayoutAppearance.OutlineBox"
                    android:layout_toEndOf="@+id/input_layout_street"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="16dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/number"
                        android:inputType="number"
                        android:textColor="@color/black"/>
                </com.google.android.material.textfield.TextInputLayout>

            </RelativeLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/input_layout_state"
                style="@style/TextInputLayoutAppearance.OutlineBox"
                android:layout_marginBottom="16dp">

                <br.com.bonnepet.view.component.AutoCompleteDropDown
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
                    android:id="@+id/input_state"
                    android:hint="@string/state"
                    android:longClickable="false"
                    android:focusableInTouchMode="false"
                    android:inputType="textNoSuggestions"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/input_layout_city"
                style="@style/TextInputLayoutAppearance.OutlineBox"
                android:layout_marginBottom="26dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/city"
                    android:inputType="text"
                    android:textColor="@color/black"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="12dp"
                android:text="@string/save"/>
        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:visibility="gone"/>
</RelativeLayout>
